welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: not found: type double
def move (nbPas : double, versLAvant : boolean) {
                  ^Program:2: error: not found: type boolean
def move (nbPas : double, versLAvant : boolean) {
                                       ^