welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move (nbPas : double, versLAvant : boolean) {
  for ( i<- 1 to nbPas){
    if (versLAvant){
      avance()
    }else{
      recule()
    }
  }
}